[gd_scene load_steps=7 format=2]

[ext_resource path="res://global_theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Embark/CharacterCustomize.gd" type="Script" id=2]
[ext_resource path="res://Player/Parts/base.png" type="Texture" id=3]
[ext_resource path="res://Player/Parts/hair1.png" type="Texture" id=4]
[ext_resource path="res://Player/Parts/outfit1.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Walk"
length = 1.2
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BaseSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HairSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OutfitSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[node name="CharacterCustomize" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -2.0
margin_right = 498.0
margin_bottom = 282.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 385.0
margin_top = 234.0
margin_right = 439.0
margin_bottom = 271.0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 50.0
margin_top = 235.0
margin_right = 112.0
margin_bottom = 272.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseSprite" type="Sprite" parent="."]
position = Vector2( 59, 70 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 4
hframes = 3
frame = 1

[node name="HairSprite" type="Sprite" parent="."]
position = Vector2( 59, 70 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
vframes = 4
hframes = 3
frame = 1

[node name="OutfitSprite" type="Sprite" parent="."]
position = Vector2( 59, 70 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
vframes = 4
hframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 1 )

[node name="Customize" type="VBoxContainer" parent="."]
margin_left = 147.0
margin_top = 51.0
margin_right = 246.0
margin_bottom = 135.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skin" type="HBoxContainer" parent="Customize"]
margin_right = 99.0
margin_bottom = 33.0
alignment = 1

[node name="Label" type="Label" parent="Customize/Skin"]
margin_left = 31.0
margin_right = 68.0
margin_bottom = 33.0
text = "Skin"

[node name="Hair" type="HBoxContainer" parent="Customize"]
margin_top = 37.0
margin_right = 99.0
margin_bottom = 77.0
custom_constants/separation = 12
alignment = 1

[node name="HairMinus" type="Button" parent="Customize/Hair"]
margin_right = 20.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 40 )
rect_pivot_offset = Vector2( -468, -48 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairLabel" type="Label" parent="Customize/Hair"]
margin_left = 32.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 36.0
text = "Hair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairPlus" type="Button" parent="Customize/Hair"]
margin_left = 78.0
margin_right = 98.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 40 )
rect_pivot_offset = Vector2( -468, -48 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outfit" type="HBoxContainer" parent="Customize"]
margin_top = 81.0
margin_right = 99.0
margin_bottom = 121.0
alignment = 1

[node name="OutfitMinus" type="Button" parent="Customize/Outfit"]
margin_right = 20.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 40 )
rect_pivot_offset = Vector2( -468, -48 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutfitLabel" type="Label" parent="Customize/Outfit"]
margin_left = 24.0
margin_top = 3.0
margin_right = 75.0
margin_bottom = 36.0
text = "Outfit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutfitPlus" type="Button" parent="Customize/Outfit"]
margin_left = 79.0
margin_right = 99.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 40 )
rect_pivot_offset = Vector2( -468, -48 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WalkButton" type="Button" parent="."]
margin_left = 24.0
margin_top = 130.0
margin_right = 93.0
margin_bottom = 167.0
toggle_mode = true
text = "Walk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkinPalette" type="Control" parent="."]
margin_left = 261.0
margin_top = 56.0
margin_right = 421.0
margin_bottom = 76.0
mouse_filter = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="SkinPalette"]
margin_left = -2.0
margin_top = -2.0
margin_right = 162.0
margin_bottom = 22.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color0" type="ColorRect" parent="SkinPalette"]
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.870588, 0.737255, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color1" type="ColorRect" parent="SkinPalette"]
modulate = Color( 0.905882, 0.866667, 0.796078, 1 )
margin_left = 20.0
margin_right = 40.0
margin_bottom = 20.0
color = Color( 0.870588, 0.737255, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color2" type="ColorRect" parent="SkinPalette"]
modulate = Color( 0.803922, 0.705882, 0.6, 1 )
margin_left = 40.0
margin_right = 60.0
margin_bottom = 20.0
color = Color( 0.870588, 0.737255, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color3" type="ColorRect" parent="SkinPalette"]
modulate = Color( 0.752941, 0.603922, 0.337255, 1 )
margin_left = 60.0
margin_right = 80.0
margin_bottom = 20.0
color = Color( 0.870588, 0.737255, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color4" type="ColorRect" parent="SkinPalette"]
modulate = Color( 0.643137, 0.505882, 0.345098, 1 )
margin_left = 80.0
margin_right = 100.0
margin_bottom = 20.0
color = Color( 0.870588, 0.737255, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color5" type="ColorRect" parent="SkinPalette"]
modulate = Color( 0.478431, 0.384314, 0.286275, 1 )
margin_left = 100.0
margin_right = 120.0
margin_bottom = 20.0
color = Color( 0.870588, 0.737255, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color6" type="ColorRect" parent="SkinPalette"]
modulate = Color( 0.356863, 0.270588, 0.152941, 1 )
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
color = Color( 0.870588, 0.737255, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color7" type="ColorRect" parent="SkinPalette"]
modulate = Color( 0.258824, 0.160784, 0.0666667, 1 )
margin_left = 140.0
margin_right = 160.0
margin_bottom = 20.0
color = Color( 0.870588, 0.737255, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HairPalette" type="Control" parent="."]
margin_left = 261.0
margin_top = 99.0
margin_right = 421.0
margin_bottom = 119.0
mouse_filter = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="HairPalette"]
margin_left = -2.0
margin_top = -2.0
margin_right = 162.0
margin_bottom = 22.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color0" type="ColorRect" parent="HairPalette"]
margin_right = 20.0
margin_bottom = 20.0
color = Color( 1, 0.784314, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color1" type="ColorRect" parent="HairPalette"]
modulate = Color( 0.596078, 0.407843, 0.0588235, 1 )
margin_left = 20.0
margin_right = 40.0
margin_bottom = 20.0
color = Color( 1, 0.784314, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color2" type="ColorRect" parent="HairPalette"]
modulate = Color( 0.501961, 0.290196, 0.0627451, 1 )
margin_left = 40.0
margin_right = 60.0
margin_bottom = 20.0
color = Color( 1, 0.784314, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color3" type="ColorRect" parent="HairPalette"]
modulate = Color( 0.407843, 0.180392, 0.0705882, 1 )
margin_left = 60.0
margin_right = 80.0
margin_bottom = 20.0
color = Color( 1, 0.784314, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color4" type="ColorRect" parent="HairPalette"]
modulate = Color( 0.313726, 0.164706, 0.0901961, 1 )
margin_left = 80.0
margin_right = 100.0
margin_bottom = 20.0
color = Color( 1, 0.784314, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color5" type="ColorRect" parent="HairPalette"]
modulate = Color( 0.235294, 0.141176, 0.0627451, 1 )
margin_left = 100.0
margin_right = 120.0
margin_bottom = 20.0
color = Color( 1, 0.784314, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color6" type="ColorRect" parent="HairPalette"]
modulate = Color( 0.14902, 0.0705882, 0.0156863, 1 )
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
color = Color( 1, 0.784314, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color7" type="ColorRect" parent="HairPalette"]
modulate = Color( 0.117647, 0.117647, 0.117647, 1 )
margin_left = 140.0
margin_right = 160.0
margin_bottom = 20.0
color = Color( 1, 0.784314, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Customize/Hair/HairMinus" to="." method="_on_HairMinus_pressed"]
[connection signal="pressed" from="Customize/Hair/HairPlus" to="." method="_on_HairPlus_pressed"]
[connection signal="pressed" from="Customize/Outfit/OutfitMinus" to="." method="_on_OutfitMinus_pressed"]
[connection signal="pressed" from="Customize/Outfit/OutfitPlus" to="." method="_on_OutfitPlus_pressed"]
[connection signal="toggled" from="WalkButton" to="." method="_on_WalkButton_toggled"]
